# PyWebTranslator

./: .gitignore  README.md  example_usage.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  translate.py
pyTranslate/seleniumbrowsers/: browsers.py
pyWebTranslate/apis/: translatorapi.py
pywebtranslator/: cli.py
pywebtranslator/code/: drivers.py  errors.py  services.py  threading.py
src/: browsers.py  deepltranslator.py  expectations.py  services.py  test.py  threading.py  translator.py
src/apis/: translatorapi.py
src/browsers/: browser.py
src/pywebtranslator/: browser.py  drivers.py  expectations.py  services.py  threading.py
src/pywebtranslator/browsers/: abstractbrowser.py  edge.py  firefox.py
src/pywebtranslator/expectations/: expectations.py
src/pywebtranslator/services/: deepl.py  google.py  translationservice.py
src/seleniumbrowsers/: browsers.py  expectations.py
web/: browsers.py  expectations.py  services.py
