[metadata]
name = pywebtranslator
version = 0.0.1
author = KeksUngegessen
author_email = ""
description = A Python package that allows translation from a variety of online translation services.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/KeksUngegessen/pyWebTranslate

classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.9.7
install_requires =
    selenium >=4.0.0
    webdriver_manager >=3.5.0

[options.packages.find]
where = src
